* Added interface ISoftDeletable * Implemented 'SoftDeletablePreUpdateHook' (sets AclRecords to idle/active state) * Implemented 'AclEntityPostDeleteHook' (deletes related records from AclRecord table) * Added new migration

--- a/src/Libraries/SmartStore.Core/SmartStore.Core.csproj
+++ b/src/Libraries/SmartStore.Core/SmartStore.Core.csproj
@@ -199,6 +199,7 @@
     <Compile Include="Infrastructure\CommonStartupTask.cs" />
     <Compile Include="Infrastructure\DependencyManagement\AutofacLifetimeScopeProvider.cs" />
     <Compile Include="IO\MimeTypes.cs" />
+    <Compile Include="ISoftDeletable.cs" />
     <Compile Include="IStoreContext.cs" />
     <Compile Include="Linq\Expanders\IPathExpander.cs" />
     <Compile Include="Linq\Expanders\LambdaPathExpander.cs" />
