--- a/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
+++ b/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
@@ -132,7 +132,7 @@
     <Compile Include="..\..\AssemblyVersionInfo.cs">
       <Link>Properties\AssemblyVersionInfo.cs</Link>
     </Compile>
-    <Compile Include="SoftDeletablePreUpdateHook.cs" />
+    <Compile Include="Hooks\SoftDeletablePreUpdateHook.cs" />
     <Compile Include="Affiliates\AffiliateService.cs" />
     <Compile Include="Affiliates\IAffiliateService.cs" />
     <Compile Include="Authentication\External\AuthorizeState.cs" />
@@ -175,8 +175,8 @@
     <Compile Include="Catalog\IProductTagService.cs" />
     <Compile Include="Catalog\ProductTagService.cs" />
     <Compile Include="Catalog\IRecentlyViewedProductsService.cs" />
-    <Compile Include="Catalog\ProductVariantAttributePostDeleteHook.cs" />
-    <Compile Include="Catalog\ProductVariantAttributeValuePostDeleteHook.cs" />
+    <Compile Include="Hooks\ProductVariantAttributePostDeleteHook.cs" />
+    <Compile Include="Hooks\ProductVariantAttributeValuePostDeleteHook.cs" />
     <Compile Include="Catalog\RecentlyViewedProductsService.cs" />
     <Compile Include="Catalog\TierPriceExtensions.cs" />
     <Compile Include="Catalog\ProductExtensions.cs" />
@@ -232,7 +232,7 @@
     <Compile Include="Filter\IFilterService.cs" />
     <Compile Include="Forums\ForumExtensions.cs" />
     <Compile Include="ICommonServices.cs" />
-    <Compile Include="Localization\LocalizedEntityPostDeleteHook.cs" />
+    <Compile Include="Hooks\LocalizedEntityPostDeleteHook.cs" />
     <Compile Include="Logging\DeleteLogsTask.cs" />
     <Compile Include="Media\CachedImageResult.cs" />
     <Compile Include="Media\IImageCache.cs" />
@@ -354,7 +354,7 @@
     </Compile>
     <Compile Include="Customers\ChangePasswordRequest.cs" />
     <Compile Include="Customers\PasswordChangeResult.cs" />
-    <Compile Include="Security\AclEntityPostDeleteHook.cs" />
+    <Compile Include="Hooks\AclEntityPostDeleteHook.cs" />
     <Compile Include="Security\AclService.cs" />
     <Compile Include="Security\EncryptionService.cs" />
     <Compile Include="Security\IAclService.cs" />
