Implemented a legacy stored procedure execution switch for SqlServer 2008 and lower (has still problems with output params)

--- a/src/Presentation/SmartStore.Web/SmartStore.Web.csproj
+++ b/src/Presentation/SmartStore.Web/SmartStore.Web.csproj
@@ -565,6 +565,8 @@
     <Content Include="Content\editors\tinymce4\skins\smartstore\img\trans.gif" />
     <Content Include="Content\editors\tinymce4\skins\smartstore\img\wline.gif" />
     <Content Include="Content\editors\tinymce4\skins\smartstore\skin.ie7.min.css" />
+    <Content Include="Content\editors\tinymce4\skins\smartstore\content.smartstore.css" />
+    <Content Include="Content\editors\tinymce4\skins\smartstore\skin.smartstore.css" />
     <Content Include="Content\editors\tinymce4\skins\smartstore\skin.min.css" />
     <Content Include="Content\editors\tinymce4\themes\modern\theme.min.js" />
     <Content Include="Content\editors\tinymce4\tinymce.gzip.js" />
