--- a/src/Libraries/SmartStore.Core/packages.config
+++ b/src/Libraries/SmartStore.Core/packages.config
@@ -8,6 +8,8 @@
   <package id="Microsoft.AspNet.Razor" version="3.1.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.1.1" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
+  <package id="Microsoft.Web.Xdt" version="1.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.1" targetFramework="net45" />
+  <package id="NuGet.Core" version="2.8.0" targetFramework="net45" />
   <package id="System.Linq.Dynamic" version="1.0.0" targetFramework="net45" />
 </packages>
