* Created package creator tool (WinForms). Enbales creation of NuGet packages for plugins and themes * Began implementing upload for plugin packages

--- a/.gitignore
+++ b/.gitignore
@@ -211,3 +211,4 @@ Kopie von*
 /src/Presentation/SmartStore.Web/Media/[Tt]humbs
 /src/Presentation/SmartStore.Web/Media/[Uu]ploaded
 
+src/SmartStoreNET.Packager.sln
