--- a/src/Presentation/SmartStore.Web/Themes/Mobile/theme.config
+++ b/src/Presentation/SmartStore.Web/Themes/Mobile/theme.config
@@ -2,6 +2,7 @@
 <Theme title="Mobile theme"
 	   supportRTL="false"
 	   mobileTheme="true"
-     previewImageUrl="~/Themes/Mobile/preview.png"
-     previewText="This is the 'Mobile' site theme.">
+	   version="1.1"
+       previewImageUrl="~/Themes/Mobile/preview.png"
+       previewText="This is the 'Mobile' site theme.">
 </Theme>
