#292 Allow specific price for attribute combinations

--- a/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
+++ b/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
@@ -127,6 +127,10 @@
     <Compile Include="Migrations\201404032144400_Packaging.Designer.cs">
       <DependentUpon>201404032144400_Packaging.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201404051412128_AttributeCombinationPrice.cs" />
+    <Compile Include="Migrations\201404051412128_AttributeCombinationPrice.Designer.cs">
+      <DependentUpon>201404051412128_AttributeCombinationPrice.cs</DependentUpon>
+    </Compile>
     <Compile Include="Setup\Builder\SettingsBuilder.cs" />
     <Compile Include="Setup\Builder\SettingsMigrator.cs" />
     <Compile Include="Setup\DbMigrationContext.cs" />
@@ -284,6 +288,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201404032144400_Packaging.resx">
       <DependentUpon>201404032144400_Packaging.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201404051412128_AttributeCombinationPrice.resx">
+      <DependentUpon>201404051412128_AttributeCombinationPrice.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Sql\Indexes.sql" />
     <EmbeddedResource Include="Sql\StoredProcedures.sql" />
