--- a/src/Presentation/SmartStore.Web/packages.config
+++ b/src/Presentation/SmartStore.Web/packages.config
@@ -12,7 +12,8 @@
   <package id="EntityFramework.SqlServerCompact" version="6.1.0" targetFramework="net45" />
   <package id="FluentValidation" version="5.0.0.1" targetFramework="net45" />
   <package id="FluentValidation.MVC4" version="5.0.0.1" targetFramework="net45" />
-  <package id="JavaScriptEngineSwitcher.Core" version="1.1.0" targetFramework="net45" />
+  <package id="JavaScriptEngineSwitcher.Core" version="1.1.3" targetFramework="net45" />
+  <package id="JavaScriptEngineSwitcher.Msie" version="1.1.4" targetFramework="net45" />
   <package id="JavaScriptEngineSwitcher.V8" version="1.1.1" targetFramework="net45" />
   <package id="jQuery" version="1.8.3" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net45" />
@@ -28,6 +29,7 @@
   <package id="MiniProfiler" version="2.1.0" targetFramework="net45" />
   <package id="MiniProfiler.EF" version="2.1.0" targetFramework="net45" />
   <package id="Modernizr" version="2.7.1" targetFramework="net45" />
+  <package id="MsieJavaScriptEngine" version="1.4.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.1" targetFramework="net45" />
   <package id="recaptcha" version="1.0.5.0" targetFramework="net45" />
   <package id="TelerikMvcExtensions" version="2012.2.607" targetFramework="net45" />
