Performance: Save a copy of the lowest attribute combination price on product level for faster calculation of the lowest product price in product lists. New button: Delete all attribute combinations of a product in one go.

--- a/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
+++ b/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
@@ -131,6 +131,10 @@
     <Compile Include="Migrations\201404051412128_AttributeCombinationPrice.Designer.cs">
       <DependentUpon>201404051412128_AttributeCombinationPrice.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201404092017069_LowestAttributeCombinationPrice.cs" />
+    <Compile Include="Migrations\201404092017069_LowestAttributeCombinationPrice.Designer.cs">
+      <DependentUpon>201404092017069_LowestAttributeCombinationPrice.cs</DependentUpon>
+    </Compile>
     <Compile Include="Setup\Builder\SettingsBuilder.cs" />
     <Compile Include="Setup\Builder\SettingsMigrator.cs" />
     <Compile Include="Setup\DbMigrationContext.cs" />
@@ -291,6 +295,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201404051412128_AttributeCombinationPrice.resx">
       <DependentUpon>201404051412128_AttributeCombinationPrice.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201404092017069_LowestAttributeCombinationPrice.resx">
+      <DependentUpon>201404092017069_LowestAttributeCombinationPrice.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Sql\Indexes.sql" />
     <EmbeddedResource Include="Sql\StoredProcedures.sql" />
