--- a/src/Tools/SmartStore.Packager/SmartStore.Packager.csproj
+++ b/src/Tools/SmartStore.Packager/SmartStore.Packager.csproj
@@ -60,6 +60,7 @@
     <Compile Include="..\..\AssemblyVersionInfo.cs">
       <Link>Properties\AssemblyVersionInfo.cs</Link>
     </Compile>
+    <Compile Include="ExtensionInfo.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
