--- a/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
+++ b/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
@@ -140,6 +140,10 @@
     <Compile Include="Migrations\201404101903014_AttributeCombinationPrice.Designer.cs">
       <DependentUpon>201404101903014_AttributeCombinationPrice.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201404170814451_BundleYouSaveLabelFix.cs" />
+    <Compile Include="Migrations\201404170814451_BundleYouSaveLabelFix.Designer.cs">
+      <DependentUpon>201404170814451_BundleYouSaveLabelFix.cs</DependentUpon>
+    </Compile>
     <Compile Include="Setup\Builder\SettingsBuilder.cs" />
     <Compile Include="Setup\Builder\SettingsMigrator.cs" />
     <Compile Include="Setup\DbMigrationContext.cs" />
@@ -300,6 +304,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201404101903014_AttributeCombinationPrice.resx">
       <DependentUpon>201404101903014_AttributeCombinationPrice.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201404170814451_BundleYouSaveLabelFix.resx">
+      <DependentUpon>201404170814451_BundleYouSaveLabelFix.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Sql\Indexes.sql" />
     <EmbeddedResource Include="Sql\StoredProcedures.sql" />
