--- a/src/Presentation/SmartStore.Web/Web.config
+++ b/src/Presentation/SmartStore.Web/Web.config
@@ -99,7 +99,8 @@
     <browserCaps configSource="browserCaps.config" />
     <customErrors defaultRedirect="errorpage.htm" mode="RemoteOnly">
       <error statusCode="404" redirect="~/404" />
-    </customErrors> 
+    </customErrors>
+    <sessionState mode="InProc" />
     <trace enabled="true" localOnly="true" pageOutput="true" requestLimit="40" /> 
     <compilation debug="true" targetFramework="4.5" batch="false" numRecompilesBeforeAppRestart="250" optimizeCompilations="true">
       <assemblies>
