--- a/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
+++ b/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
@@ -144,6 +144,10 @@
     <Compile Include="Migrations\201404170814451_BundleYouSaveLabelFix.Designer.cs">
       <DependentUpon>201404170814451_BundleYouSaveLabelFix.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201404232319321_LessValidation.cs" />
+    <Compile Include="Migrations\201404232319321_LessValidation.Designer.cs">
+      <DependentUpon>201404232319321_LessValidation.cs</DependentUpon>
+    </Compile>
     <Compile Include="Setup\Builder\SettingsBuilder.cs" />
     <Compile Include="Setup\Builder\SettingsMigrator.cs" />
     <Compile Include="Setup\DbMigrationContext.cs" />
@@ -307,6 +311,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201404170814451_BundleYouSaveLabelFix.resx">
       <DependentUpon>201404170814451_BundleYouSaveLabelFix.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201404232319321_LessValidation.resx">
+      <DependentUpon>201404232319321_LessValidation.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Sql\Indexes.sql" />
     <EmbeddedResource Include="Sql\StoredProcedures.sql" />
