--- a/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
+++ b/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
@@ -148,6 +148,10 @@
     <Compile Include="Migrations\201404232319321_LessValidation.Designer.cs">
       <DependentUpon>201404232319321_LessValidation.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201404292222025_FixMaxLength.cs" />
+    <Compile Include="Migrations\201404292222025_FixMaxLength.Designer.cs">
+      <DependentUpon>201404292222025_FixMaxLength.cs</DependentUpon>
+    </Compile>
     <Compile Include="Setup\Builder\SettingsBuilder.cs" />
     <Compile Include="Setup\Builder\SettingsMigrator.cs" />
     <Compile Include="Setup\DbMigrationContext.cs" />
@@ -314,6 +318,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201404232319321_LessValidation.resx">
       <DependentUpon>201404232319321_LessValidation.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201404292222025_FixMaxLength.resx">
+      <DependentUpon>201404292222025_FixMaxLength.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Sql\Indexes.sql" />
     <EmbeddedResource Include="Sql\StoredProcedures.sql" />
