--- a/src/Tests/SmartStore.Core.Tests/SmartStore.Core.Tests.csproj
+++ b/src/Tests/SmartStore.Core.Tests/SmartStore.Core.Tests.csproj
@@ -81,6 +81,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ComponentModel\ExpandoTests.cs" />
+    <Compile Include="WildcardTests.cs" />
     <Compile Include="Domain\Shipping\ShippingOptionListTypeConverterTests.cs" />
     <Compile Include="Domain\Stores\StoreExtensionsTests.cs" />
     <Compile Include="Infrastructure\DependencyManagement\AutofacTests.cs" />
