--- a/src/Libraries/SmartStore.Core/SmartStore.Core.csproj
+++ b/src/Libraries/SmartStore.Core/SmartStore.Core.csproj
@@ -142,6 +142,7 @@
     <Compile Include="..\..\AssemblyVersionInfo.cs">
       <Link>Properties\AssemblyVersionInfo.cs</Link>
     </Compile>
+    <Compile Include="Async\AsyncExtensions.cs" />
     <Compile Include="Async\AsyncState.cs" />
     <Compile Include="Caching\DefaultCacheManager.cs" />
     <Compile Include="Caching\AspNetCache.cs" />
