--- a/src/Plugins/Api.WebApi/SmartStore.Plugin.Api.WebApi.csproj
+++ b/src/Plugins/Api.WebApi/SmartStore.Plugin.Api.WebApi.csproj
@@ -261,6 +261,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="changelog.md">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <None Include="Docs\Developer-Guide.md" />
     <None Include="packages.config">
       <SubType>Designer</SubType>
