--- a/src/Plugins/ExchangeRate.EcbExchange/SmartStore.Plugin.ExchangeRate.EcbExchange.csproj
+++ b/src/Plugins/ExchangeRate.EcbExchange/SmartStore.Plugin.ExchangeRate.EcbExchange.csproj
@@ -20,10 +20,14 @@
     <AssemblyName>SmartStore.Plugin.ExchangeRate.EcbExchange</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <SccProjectName>SAK</SccProjectName>
-    <SccLocalPath>SAK</SccLocalPath>
-    <SccAuxPath>SAK</SccAuxPath>
-    <SccProvider>SAK</SccProvider>
+    <SccProjectName>
+    </SccProjectName>
+    <SccLocalPath>
+    </SccLocalPath>
+    <SccAuxPath>
+    </SccAuxPath>
+    <SccProvider>
+    </SccProvider>
     <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
