--- a/src/Plugins/ExternalAuth.OpenId/SmartStore.Plugin.ExternalAuth.OpenId.csproj
+++ b/src/Plugins/ExternalAuth.OpenId/SmartStore.Plugin.ExternalAuth.OpenId.csproj
@@ -20,10 +20,14 @@
     <AssemblyName>SmartStore.Plugin.ExternalAuth.OpenId</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <SccProjectName>SAK</SccProjectName>
-    <SccLocalPath>SAK</SccLocalPath>
-    <SccAuxPath>SAK</SccAuxPath>
-    <SccProvider>SAK</SccProvider>
+    <SccProjectName>
+    </SccProjectName>
+    <SccLocalPath>
+    </SccLocalPath>
+    <SccAuxPath>
+    </SccAuxPath>
+    <SccProvider>
+    </SccProvider>
     <TargetFrameworkProfile />
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\</SolutionDir>
     <RestorePackages>true</RestorePackages>
