Type naming: had to rename "SmartStore.Services.Tasks.Task" to "...Job" in order to prevent naming conflicts with "System.Threading.Tasks.Task" (namespace aliases are annoying)

--- a/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
+++ b/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
@@ -404,7 +404,7 @@
     <Compile Include="Tasks\ScheduleTaskService.cs" />
     <Compile Include="Tasks\IScheduleTaskService.cs" />
     <Compile Include="Tasks\ITask.cs" />
-    <Compile Include="Tasks\Task.cs" />
+    <Compile Include="Tasks\Job.cs" />
     <Compile Include="Tasks\TaskManager.cs" />
     <Compile Include="Tasks\TaskThread.cs" />
     <Compile Include="Tax\CalculateTaxRequest.cs" />
