* Task Scheduler:  - Can run tasks manually now (async)  - Better UI  - Shows last error  - (Developer) Breaking change: New parameter TaskExecutionContext for ITask.Execute() * (Developer) New IoC method ContainerManager.InjectProperties()

--- a/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
+++ b/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
@@ -164,6 +164,10 @@
     <Compile Include="Migrations\201405071457441_FixRes1.Designer.cs">
       <DependentUpon>201405071457441_FixRes1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201405282243489_TaskUpdate.cs" />
+    <Compile Include="Migrations\201405282243489_TaskUpdate.Designer.cs">
+      <DependentUpon>201405282243489_TaskUpdate.cs</DependentUpon>
+    </Compile>
     <Compile Include="Setup\Builder\SettingsBuilder.cs" />
     <Compile Include="Setup\Builder\SettingsMigrator.cs" />
     <Compile Include="Setup\DbMigrationContext.cs" />
@@ -339,6 +343,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201405071457441_FixRes1.resx">
       <DependentUpon>201405071457441_FixRes1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201405282243489_TaskUpdate.resx">
+      <DependentUpon>201405282243489_TaskUpdate.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Sql\Indexes.sql" />
     <EmbeddedResource Include="Sql\StoredProcedures.sql" />
