--- a/src/Presentation/SmartStore.Web.Framework/SmartStore.Web.Framework.csproj
+++ b/src/Presentation/SmartStore.Web.Framework/SmartStore.Web.Framework.csproj
@@ -242,8 +242,8 @@
     <Compile Include="Mvc\Bundles\IBundlePublisher.cs" />
     <Compile Include="Mvc\CommaSeparatedModelBinder.cs" />
     <Compile Include="Mvc\UniversalResult.cs" />
-    <Compile Include="Plugins\PluginHelperFeed.cs" />
-    <Compile Include="Plugins\PluginHelperBase.cs" />
+    <Compile Include="Plugins\FeedPluginHelper.cs" />
+    <Compile Include="Plugins\PluginHelper.cs" />
     <Compile Include="Controllers\PublicStoreAllowNavigationAttribute.cs" />
     <Compile Include="Mvc\Routes\GuidConstraint.cs" />
     <Compile Include="Seo\GenericPathRoute.cs" />
