--- a/src/Presentation/SmartStore.Web.Framework/SmartStore.Web.Framework.csproj
+++ b/src/Presentation/SmartStore.Web.Framework/SmartStore.Web.Framework.csproj
@@ -242,6 +242,7 @@
     <Compile Include="Mvc\Bundles\IBundlePublisher.cs" />
     <Compile Include="Mvc\CommaSeparatedModelBinder.cs" />
     <Compile Include="Mvc\UniversalResult.cs" />
+    <Compile Include="Plugins\FeedPluginCore.cs" />
     <Compile Include="Plugins\FeedPluginHelper.cs" />
     <Compile Include="Plugins\PluginHelper.cs" />
     <Compile Include="Controllers\PublicStoreAllowNavigationAttribute.cs" />
