Minor build fix: added placeholder file to folder Content/files/ExportImport and changed gitignore accordingly

--- a/.gitignore
+++ b/.gitignore
@@ -205,7 +205,7 @@ Kopie von*
 /src/Presentation/SmartStore.Web/Media
 
 # Import/Export
-/src/Presentation/SmartStore.Web/Content/files/[Ee]xport[Ii]mport
+/src/Presentation/SmartStore.Web/Content/files/[Ee]xport[Ii]mport/*.*
 
 # Media
 /src/Presentation/SmartStore.Web/Media/[Tt]humbs
